# typed-tuples

./: LICENSE  README.md  typed-tuples.cabal
app/: Main.hs  Main2.hs
