name:                typed-tuples
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/wapxmas/typed-tuples#readme
license:             BSD3
license-file:        LICENSE
author:              Sergey N. Yashin
maintainer:          yashin.sergey@gmail.com
copyright:           2016 Sergey N. Yashin
category:            Utils
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable typed-tuples-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wapxmas/typed-tuples
